# IBM650

./: .gitignore  Makefile  README.md  buffer.hpp  computer.cpp  computer.hpp  doctest.h  drum.cpp  drum.hpp  input_output.org  input_output_unit.cpp  input_output_unit.hpp  meson.build  register.cpp  register.hpp  test.cpp  test_computer.cpp  test_drum.cpp  test_fixture.hpp  test_input_output.cpp  test_opcodes.cpp  test_register.cpp
UI/: IBM650.glade  app.cpp  meson.build
